Fix tag links, category bullets, align continue link

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -26,7 +26,7 @@
   display: block
   margin-left: auto
   margin-right: auto
-  width: 60%
+  width: 100%
 
 .article-meta
   clearfix()
@@ -69,6 +69,12 @@
 
 .article-category-link:hover
   color: color-theme !important
+
+.category-list-child
+  list-style: none !important
+
+.category-list-item
+  margin: 0 !important
 
 .facebook-share:before
   font-family: "FontAwesome"
@@ -264,7 +270,7 @@
       margin-top: 0
 
 .article-more-link
-  text-align: center
+  text-align: right
 
 .article-more-link a
   color: color-grey
@@ -307,8 +313,12 @@
   color: #333
 
 .article-tag-list-item
+  color: color-grey
   display: inline-block
   margin-right: 8px
+
+.article-tag-list-link:hover
+  color: color-theme !important
 
 .article-comment-link
   float: right
